--- a/porfolio.css
+++ b/porfolio.css
@@ -1,9 +1,57 @@
-h1 {
-  font-family: "Playfair Display", serif;
+:root {
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+body {
+  font-family: var(--default-font-family);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
   font-weight: bold;
+  color: black;
+}
+
+h1 {
+  font-size: 96px;
+}
+h2 {
+  color: #272142;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
   font-weight: normal;
+}
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-family: Poppins;
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+}
+.hero h2 {
+  font-family: var(--default-font-family);
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+}
+.btn-primary {
+  background: var(--branding-color);
+  height: 63px;
+  width: 200px;
+  left: 618px;
+  top: 566px;
+  border-radius: 4px;
+  padding: 18px 30px 18px 30px;
 }
