--- a/porfolio.css
+++ b/porfolio.css
@@ -22,16 +22,18 @@ h1 {
   font-size: 96px;
 }
 h2 {
-  color: #272142;
+  font-size: 64px;
 }
 
 p {
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 .hero {
   background-color: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 100px 20px;
 }
 
 .hero p {
@@ -44,7 +46,7 @@ p {
   font-family: var(--default-font-family);
   font-weight: normal;
   font-size: 24px;
-  line-height: 2;
+  line-height: 1.4;
 }
 .btn-primary {
   background: var(--branding-color);
@@ -54,4 +56,30 @@ p {
   top: 566px;
   border-radius: 4px;
   padding: 18px 30px 18px 30px;
+}
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  border-radius: 4px;
+  padding: 8px 20px 8px 20px;
+}
+.project-description {
+  padding: 120px 60px;
+}
+@media (max-width: 900px) {
+  h1 {
+    font-size: 60px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
