--- a/porfolio.css
+++ b/porfolio.css
@@ -24,6 +24,9 @@ h1 {
 h2 {
   font-size: 64px;
 }
+h4 {
+  font-size: 48px;
+}
 
 p {
   font-weight: normal;
@@ -67,6 +70,39 @@ p {
 .project-description {
   padding: 120px 60px;
 }
+footer {
+  margin: 60px 0;
+}
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+footer .contact-box p {
+  margin: 0;
+}
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--branding-color);
+}
+footer .e-mail-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+footer .e-mail-link:hover {
+  color: var(--branding-color);
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 60px;
@@ -75,11 +111,17 @@ p {
   h2 {
     font-size: 44px;
   }
+  h4 {
+    font-size: 18px;
+  }
   .hero {
     padding: 80px 20px;
   }
   .project-description {
     padding: 0;
     text-align: center;
+  }
+  footer .contact-box {
+    padding: 30px;
   }
 }
