--- a/porfolio.css
+++ b/porfolio.css
@@ -53,19 +53,20 @@ p {
 }
 .btn-primary {
   background: var(--branding-color);
-  height: 63px;
-  width: 200px;
-  left: 618px;
-  top: 566px;
   border-radius: 4px;
   padding: 18px 30px 18px 30px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
 .btn-branding-outline {
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
   border-radius: 4px;
-  border-radius: 4px;
-  padding: 8px 20px 8px 20px;
+  padding: 15px 30px;
+  font-size: 18px;
+  line-height: 27px;
 }
 .project-description {
   padding: 120px 60px;
