--- a/porfolio.css
+++ b/porfolio.css
@@ -51,6 +51,21 @@ p {
   font-size: 24px;
   line-height: 1.4;
 }
+.about-section {
+  padding: 160px 20px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section h2 {
+  font-size: 18px;
+  line-height: 27px;
+  font-family: var(--default-font-family);
+}
+.about-section-content {
+  margin: 30px;
+}
 .btn-primary {
   background: var(--branding-color);
   border-radius: 4px;
@@ -117,6 +132,10 @@ footer .e-mail-link:hover {
   }
   .hero {
     padding: 80px 20px;
+  }
+  .about-section {
+    text-align: center;
+    padding: 0px;
   }
   .project-description {
     padding: 0;
